docs: add comprehensive project README covering all 8 phases